2002-02-26  Simon Waters <simon@wretched.demon.co.uk>

	* Hacked version of ac_need_stdint_h AC macro to fix Win32 build

2002-02-12  Simon Waters <simon@wretched.demon.co.uk>

	* Fix bug with saving move after mate in PGN files

2002-02-09  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* book.c: Checked for calloc() failure to return BOOK_ENOMEM
	in BookBuilderOpen().

	* iterate.c: Changed search time calculation to a very
	non-aggressive strategy (keep always 2 seconds for possible
	delays). Added SearchRoot() if we fail low. This should fix
	the illegal move problem, which occurred exactly when we
	failed low for all depths.

2002-02-08  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Changes mainly to book.c in order to have
	dynamically allocated book hashes. Changed the
	binary book format once more.

2002-02-07  Simon Waters <simon@wretched.demon.co.uk>

	* Moved Lukas's version into CVS

	* Adjusted version string to 5.03

	* Reimplemented bk in better fashion

	* Added self to authors file


2002-02-06  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Clean-ups to make it build with the Sun cc compiler.

	* moved leadz() and nbits() to inlines.h, so that they will
	really be inlined. Left the original versions in util.c,
	so that one can define NO_INLINE to get the functions
	exported. Speed gain is quite significant on Linux/PPC.

2002-02-05  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Fixed a nasty bug in buf_to_book() which would add position
	evaluations to all the hash-collision positions while traversing
	the list. As collisions are not very frequent, this would
	generate slightly wrong books which could lead to infrequent
	strange opening blunders.

	* Abstracted hash handling functions in book.c into macros,
	implemented secondary hash traversal.

2002-02-04  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Removed index from binary book file, continued fixing book
	building. (It used to take only the white moves if two players